# 2hjs

./: .env  .gitignore  AI_RULES_AND_GUIDELINES.md  Ali.md  LAMP.xlsx  PROJECT_SUMMARY.md  README.md  The 2-Hour Job Search_ Using Te - Steve Dalton.txt  The Job Closer_ Time-Saving Tec - Steve Dalton.txt  gen-lang-client-0842611531-ec48614ae819.json  goals_data.txt  google_sheets_connection.py  lamp_list_handler.py  requirements.txt
2hjs/: pyproject.toml
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
memlog/: changelog.md  stability_checklist.md  url_debug_checklist.md
